Deleted Keyframe Still Affects Scene #62750

Closed
opened 2019-03-19 18:57:41 +01:00 by Shepherd Duff · 5 comments

System Information
Operating system: Windows 10 Home (Version 1803)
Graphics card: 3 x GTX 1080 (SLI Disabled for Blender)

Blender Version
Broken: 2.80, d47f827019, 3-19-2019
Worked: 2.79

Short description of error
Deleting a keyframe through the viewport by pressing ALT + I removes the keyframe, but the changes are not reflected in playback until something forces the animation to update.

Exact steps for others to reproduce the error
• Open the default startup scene.
• Select the Default Cube and Press I then O to insert a LocRot keyframe.
• Jump forward on the timeline.
• Move the cube somewhere else and insert another keyframe.
• Press ALT + I to remove that keyframe.

The animation will persist until it is updated. So far I've found that doing any of these things will update the animation:
• Adding another transform keyframe anywhere on the timeline for that object.
• Removing any transform keyframe through another method such as clicking the keyframe button next to the object attribute in the Object Panel or deleting it in the Dope Sheet.
• Saving and re-opening the scene.
• Keying a modifier

Things that won't update the animation:
• Adding another object.
• Keying another object.
• Keying a material property
• Adding a modifier (But keying that modifier will cause an update)

**System Information** Operating system: Windows 10 Home (Version 1803) Graphics card: 3 x GTX 1080 (SLI Disabled for Blender) **Blender Version** Broken: 2.80, d47f827019f2, 3-19-2019 Worked: 2.79 **Short description of error** Deleting a keyframe through the viewport by pressing ALT + I removes the keyframe, but the changes are not reflected in playback until something forces the animation to update. **Exact steps for others to reproduce the error** • Open the default startup scene. • Select the Default Cube and Press I then O to insert a LocRot keyframe. • Jump forward on the timeline. • Move the cube somewhere else and insert another keyframe. • Press ALT + I to remove that keyframe. The animation will persist until it is updated. So far I've found that doing any of these things will update the animation: • Adding another transform keyframe anywhere on the timeline for that object. • Removing any transform keyframe through another method such as clicking the keyframe button next to the object attribute in the Object Panel or deleting it in the Dope Sheet. • Saving and re-opening the scene. • Keying a modifier Things that won't update the animation: • Adding another object. • Keying another object. • Keying a material property • Adding a modifier (But keying that modifier will cause an update)
Author

Added subscriber: @Dekanuva

Added subscriber: @Dekanuva

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-20 10:15:42 +01:00

I'm guessing this is just a case of the shortcut alt+i not triggering a depsgraph update.
(Manually deleting the keyframes in the timeline works fine)

I'm guessing this is just a case of the shortcut alt+i not triggering a depsgraph update. (Manually deleting the keyframes in the timeline works fine)

This issue was referenced by 1d5c85ffd9

This issue was referenced by 1d5c85ffd9f52f94b7262f8adecad8fa71339ab7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62750
No description provided.