Fix T62750: Deleted Keyframe Still Affects Scene

Missing ID recalc tag.